--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
       href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Limelight&family=Wix+Madefor+Display:wght@400..800&display=swap"
       rel="stylesheet"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-8TB1JSVF2R"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-8TB1JSVF2R");
+    </script>
     <title>andr3wM</title>
   </head>
   <body>
